# system-design

./: .gitignore
Algorithms/Algorithms.App/: Algorithms.App.slnx
Algorithms/Problems/: Algorithm Problems.md
High Level System Design/: Slides+-+Section+1 (1).pptx  Slides+-+Section+22+-+ecommerce.pptx  designing-distributed-systems-patterns.md  fundamentals-of-high-level-system-design.md
High Level System Design/E-commerce System/: doc.md
High Level System Design/Email Service/: doc.md  (+1 more)
Languages/: CSharp Runbook.md  JavaScript Runbook.md  Python Runbook.md  Rust Runbook.md
Low Level System Design/: bloom-filter.md  call-center.md  cards-deck.md  chat-system.md  distributed -search.md  elevator.md  event-calander.md  fundamentals-of-low-level-system-design.md  hashtable.md  heap-sort.md  hotel-booking.md  lru-cache.md  mergesort.md  parking-lot.md  print-last-n-lines-of-a-big-file-or-big-string.md  priority-queue.md  quicksort.md  rate-limiter.md  restaurant-finder.md  shopping-site.md  text-sharing.md  unique-counter.md  unique-number-generator.md  url-shortener.md  web-crawler.md
Samples/: DistributedSystem.sln
Samples/raft/: Cargo.toml  RAFT_ARCHITECTURE.md
Samples/raft/src/: command.rs  config.rs  error.rs  leader.rs  lib.rs  log.rs  node.rs  node_handler.rs  replication.rs  role.rs  state.rs  status.rs
Samples/raft/src/message/: append_entries.rs  append_entries_response.rs  entry.rs  message.rs  message_type.rs  mod.rs  vote.rs  vote_response.rs
Samples/raft/src/storage/: file_storage.rs  memory_storage.rs  mod.rs  storage.rs
raft/src/: lib.rs  (+11 more)
(+402 files in other folders)
