[package]
name = "raft"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
